<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/publicacion_fragment"
    tools:context=".Frgaments.PublicacionFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            >
   <!-- <TextView
        android:id="@+id/tvSede"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment" /> -->
    <TextView
        android:id="@+id/tvDescrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/hello_blank_fragment" />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/link"
        android:text="@string/link" />`
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/link2"
        android:text="@string/link2" />`
        </LinearLayout>


    <android.support.v7.widget.RecyclerView

        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:scrollbars="vertical" />
    </LinearLayout>

</FrameLayout>